fix: overflow bug fix

--- a/frontend/melodiket/src/styles/globals.css
+++ b/frontend/melodiket/src/styles/globals.css
@@ -33,7 +33,6 @@ input[type='date']::-webkit-datetime-edit-day-field {
 }
 
 * {
-  overflow-y: auto;
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
